--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ['3.11', '3.12', '3.13'] # Added Python 3.13 to the matrix
+        python-version: ['3.11', '3.12', '3.13']
     steps:
       - uses: actions/checkout@v4
         with:
@@ -29,11 +29,10 @@ jobs:
 
       - name: Run GPX sync test
         run: |
-          # make sure the gpx_sync.py script is executable
           python run_page/gpx_sync.py
 
       - name: Check formatting (black)
-        run: black . --diff --color && black . --check
+        run: black . --check
 
       - name: Lint with Ruff
         run: |
@@ -55,6 +54,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
+
       - name: Enable corepack
         run: npm install -g corepack@latest && corepack enable pnpm
 
